# sanic

./: .appveyor.yml  .black.toml  .codeclimate.yml  .coveragerc  .deepsource.toml  .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CHANGES  CODE_OF_CONDUCT.md  CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  Machine server  Makefile  Pipfile  README.md  README.rst  SECURITY.md  Worker manager  bandit.baseline  codecov.yml  crowdin.yml  environment.yml  livereload_example.py  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  readthedocs.yml  release.py  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.cfg  setup.py  (+2 more)
.github/: CODEOWNERS  FUNDING.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  config.yml  feature-request.yml  feature_request.md  help-wanted.md  rfc.yml
.github/workflows/: codecov.yml  codeql-analysis.yml  coverage-upload.yml  coverage.yml  on-demand.yml  pr-bandit.yml  pr-docs.yml  pr-format-tests.yml  pr-linter.yml  pr-python-pypy.yml  pr-python310.yml  pr-python311.yml  pr-python37.yml  pr-python38.yml  pr-python39.yml  pr-security-tests.yml  pr-tests.yml  pr-type-check.yml  pr-unit-linux.yml  pr-unit-tests.yml  pr-windows.yml  publish-images.yml  publish-package.yml  publish-release.yml  pull-request.yml  tests.yml
benchmarking/: __init__.py  benchmark_config.json
benchmarking/servers/: sanic_server.py
changelogs/: 1631.doc.rst  1631.feature.rst  1691.doc.rst  1704.doc.rst  1707.bugfix.rst  1892.removal.rst  1904.feature.rst  1970.misc.rst  37.bugfix.rst
docker/: Dockerfile  Dockerfile-base
docs/: Makefile  blueprints.md  class_based_views.md  conf.py  config.md  contributing.md  cookies.md  custom_protocol.md  deploying.md  exceptions.md  extensions.md  getting_started.md  index.html  index.rst  make.bat  middleware.md  request_data.md  routing.md  signals.md  static_files.md  testing.md
docs/_static/: custom.css
docs/_templates/: banner.html
docs/sanic/: api_reference.rst  asyncio_python37.rst  blueprints.md  blueprints.rst  changelog.md  changelog.rst  class_based_views.md  class_based_views.rst  config.md  config.rst  contributing.md  contributing.rst  cookies.md  cookies.rst  custom_protocol.md  custom_protocol.rst  debug_mode.rst  decorators.md  decorators.rst  deploying.md  deploying.rst  examples.rst  exceptions.md  exceptions.rst  extensions.md  extensions.rst  getting_started.md  getting_started.rst  http2.md  index.rst  logging.md  logging.rst  (+22 more)
examples/: Dockerfile  add_task_sanic.py  aiohttp_example.py  amending_request_object.py  authorized_sanic.py  base_handle.py  blueprint_middlware_execution_order.py  blueprints.py  cache_example.py  cors.html  cors_example.py  custom_logger.py  custom_protocol.py  dask_distributed.py  delayed_response.py  detailed_example.py  docker-compose.yml  exception_monitoring.py  hello_world.py  http_redirect.py  jinja_example.py  limit_concurrency.py  livereload_example.py  log_request_id.py  logdna_example.py  modify_header_example.py  override_logging.py  pytest_xdist.py  raygun_example.py  redirect_example.py  request_timeout.py  rollbar_example.py  run_asgi.py  run_async.py  run_async_advanced.py  sanic_aiomysql_with_global_pool.py  sanic_aiopeewee.py  sanic_aiopg_example.py  sanic_aiopg_sqlalchemy_example.py  sanic_aioredis_example.py  (+22 more)
guide/: Makefile  Procfile  package.json  pyproject.toml  requirements.txt  server.py
hack/: Dockerfile
sanic/: __init__.py  __main__.py  __version__.py  _live_reload.py  app.py  asgi.py  base.py  blueprint_group.py  blueprint_grpoup.py  blueprints.py  compat.py  config.py  constants.py  cookies.py  default.yml  defaultFilter.py  deprecated.py  errorpages.py  exceptions.py  forwarded.py  handlers.py  headers.py  helpers.py  http.py  introspection.py  ip.py  log.py  middleware.py  policy.py  protocol.py  reloader_helpers.py  reloadhandler.py  request.py  response.py  router.py  sanic.py  server.py  server_asyncio.py  server_trio.py  sessions.py  (+11 more)
scripts/: benchmark.py  changelog.py  pyproject.toml  release.py
tests/: #test_response.py#  asyncmock.py  client.py  conftest.py  golang.http.go  helpers.py  pytest.ini  python.aiohttp.py  python.sanic.py  test_app.py  test_app_extensions.py  test_asgi.py  test_asgi_client.py  test_async_run.py  test_auto_reload.py  test_bad_request.py  test_base.py  test_basehandle.py  test_blueprint_copy.py  test_blueprint_group.py  test_blueprints.py  test_cancellederror.py  test_cli.py  test_coffee.py  test_config.py  test_constants.py  test_cookies.py  test_create_task.py  test_css.py  test_custom_protocol.py  test_custom_request.py  test_daemon.py  test_deprecation.py  test_dynamic_routes.py  test_ensure_future.py  test_errorpages.py  test_exceptions.py  test_exceptions_handler.py  test_ext_integration.py  test_file_response.py  (+75 more)
(+709 files in other folders)
