[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
extend-select = ["I", "W", "UP", "C4", "ISC", "S"]
# Worth selecting but still too broken: ASYNC, B, DTZ, FA
ignore = [
	"D100",
	"D101",
	"D102",
	"D103",
	"E402",
	"E741",
	"F811",
	"F821",
	# ruff format complains about these:
	"ISC001",
	"S101",
	"S102",
	"S104",
	"S311",
	"S603",
	"S607",
	"W191",
]
show-source = true
show-fixes = true

[tool.ruff.per-file-ignores]
"examples/request_stream/client.py" = ["S113"]
"tests/*" = ["S"]
"scripts/*" = ["S"]
"sanic/cli/inspector_client.py" = ["S310"]

[tool.ruff.isort]
known-first-party = ["sanic"]
known-third-party = ["pytest"]

[[tool.mypy.overrides]]
module = [
    "httptools.*",
    "trustme.*",
    "sanic_routing.*",
    "aioquic.*",
    "html5tagger.*",
    "tracerite.*",
]
ignore_missing_imports = true
