[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.ruff]
target-version = "py38"
line-length = 79

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "W",    # pycodestyle warnings
]
ignore = [
    "E203",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.isort]
known-first-party = ["sanic"]
known-third-party = ["pytest"]
lines-after-imports = 2
lines-between-types = 1

[[tool.mypy.overrides]]
module = [
    "httptools.*",
    "trustme.*",
    "sanic_routing.*",
    "aioquic.*",
    "html5tagger.*",
    "tracerite.*",
]
ignore_missing_imports = true
