[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sanic"
dynamic = ["version"]
description = "A web server and web framework that's written to go fast. Build fast. Run fast."
readme = "README.rst"
license = {text = "MIT"}
authors = [
    {name = "Sanic Community", email = "admhpkns@gmail.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "sanic-routing>=23.12.0",
    "httptools>=0.0.10",
    "uvloop>=0.15.0; sys_platform != 'win32' and implementation_name == 'cpython'",
    "ujson>=1.35; sys_platform != 'win32' and implementation_name == 'cpython'",
    "aiofiles>=0.6.0",
    "websockets>=10.0",
    "multidict>=5.0,<7.0",
    "html5tagger>=1.2.1",
    "tracerite>=1.0.0",
    "typing-extensions>=4.4.0",
    "setuptools>=70.1.0",
]

[project.optional-dependencies]
dev = [
    "sanic[test]",
    "cryptography",
    "towncrier",
    "nox",
]
test = [
    "sanic-testing>=23.6.0",
    "pytest>=8.2.2",
    "coverage",
    "beautifulsoup4",
    "pytest-sanic",
    "pytest-benchmark",
    "chardet==3.*",
    "ruff",
    "bandit",
    "mypy",
    "docutils",
    "pygments",
    "uvicorn",
    "slotscheck>=0.8.0,<1",
    "types-ujson; sys_platform != 'win32' and implementation_name == 'cpython'",
]
ext = [
    "sanic-ext",
]
http3 = [
    "aioquic",
]
docs = [
    "sphinx>=2.1.2",
    "sphinx_rtd_theme>=0.4.3",
    "docutils",
    "pygments",
    "m2r2",
    "enum-tools[sphinx]",
    "mistune<2.0.0",
    "autodocsumm>=0.2.11",
]

[project.urls]
Homepage = "http://github.com/sanic-org/sanic/"

[project.scripts]
sanic = "sanic.__main__:main"

[tool.hatch.version]
path = "sanic/__version__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/sanic",
    "/tests",
    "/LICENSE",
    "/README.rst",
    "/pyproject.toml",
    "/NOX_COMMANDS.md",
    "/noxfile.py",
    "/.coveragerc",
]

[tool.hatch.build.targets.wheel]
packages = ["sanic"]


[tool.ruff]
target-version = "py39"
line-length = 79

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "W",    # pycodestyle warnings
]
ignore = [
    "E203",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["sanic"]
known-third-party = ["pytest"]
lines-after-imports = 2
lines-between-types = 1

[[tool.mypy.overrides]]
module = [
    "httptools.*",
    "trustme.*",
    "sanic_routing.*",
    "aioquic.*",
    "html5tagger.*",
    "tracerite.*",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "nox>=2025.11.12",
]
